feat(fonts): adds titles font

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ body {
   color: #333;
   --type-first: Helvetica, Arial, sans-serif;
   --type-second: "Spectral", Georgia;
-  font-family: var(--type-first);
+  font-family: var(--type-second-spectral);
 }
 
 h1,
