--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,8 @@ body {
   margin: 0px;
   color: #333;
   --type-first: Helvetica, Arial, sans-serif;
-  --type-second: "Spectral", Georgia;
-  font-family: var(--type-second-spectral);
+  --type-second: var(--type-second-spectral), Georgia;
+  font-family: var(--type-first);
 }
 
 h1,
@@ -27,6 +27,7 @@ li {
 }
 
 img {
+  height: auto;
   display: block;
   max-width: 100%;
 }
